examples/test/testpolicy12833.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12833
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key27: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value13
          key25: value30
      podSelector:
        matchLabels:
          key34: value42
          key41: value1
